incluindo fonts hover and span

--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -3,11 +3,11 @@ header {
     top: 0;
     z-index: 100; // vai ficar na frente de 100 tags do mesmo nivel
     width: 100%;
-    background-color: white;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100px;
+    height: 60px;
+    padding: 30px;
     
     // usando o sass
     & > nav {
@@ -34,13 +34,72 @@ section.full-banner {
     height: 100vh;
     background: url(../images/c6bank/hero-bg-xs-tablet.webp);
     background-size: cover;
+    > .destak {
+        width: 40%;
+        height: 60vh;
+        position: absolute;
+        bottom: 0;
+        left: 15%;
+        > div > h1 {
+            margin: 0;
+            font-weight: 300;
+            font-size: 4rem;
+            line-height: 1em;
+            margin-bottom: 20px;
+        }
+        > div > h2, h3 {
+            font-weight: 300;
+            margin: 0;
+        }
+        > div > h3 {
+            width: 85%;
+            background: rgba(36,36,36, 0.35);
+            color: white;
+            line-height: 2em;
+            font-size: 0.8em;
+            padding: 0 2%;
+            border-radius: 25px;
+        }
+    }
 }
+
+::selection {
+    background: #ffe45c;
+    color: #242424;
+}
+
+.button-disable {
+    background: none;
+    border: solid 0.5px rgba(26,26,26, 0.8);
+    
+}
+
+.button-disable:hover{
+    background: rgba(26,26,26, 0.8);
+}
+
 button {
+    background: linear-gradient(150deg, #ffe45c 0%, #ffc900 100%);
     width: 290px;
     line-height: 40px;
     border-radius: 25px;
     border: none;
     text-transform: uppercase;
+}
+button:hover {
+    background: linear-gradient(150deg, #f8eaa6 0%, #ffc900 100%);
+    box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2);
+    cursor: pointer;
+}
+.destak h3 > span {
+    background: rgba(36,36,36, 0.5);
+    border-radius: 25px;
+    font-size: 0.8em;
+    display: inline-block;
+    line-height: 1.6em;
+    width: fit-content;
+    padding: 0 2%;
+    font-weight: bold;
 }
 
 @media(min-width: 768px) {
@@ -49,9 +108,15 @@ button {
         background-size: cover;
     }
 }
-@media(min-width: 1280px) {
+@media(min-width: 1279px) {
     section.full-banner {
         background: url('../images/c6bank/hero-bg-desktop.webp');
         background-size: cover;
     }
+}
+> div > h3 > span {
+    background: rgba(36,36,36, 0.5);
+    border-radius: 25px;
+    font-size: 0.8em;
+    display: block;
 }
