--- a/assets/scss/reset.scss
+++ b/assets/scss/reset.scss
@@ -5,7 +5,7 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Open Sans', 'Roboto', sans-serif;
     font-size: 16px;
     line-height: 1.5;
     color: #333;
