--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -1,4 +1,5 @@
 header {
+    transition-duration: 1.0s;
     position: fixed; // congelado na tela
     top: 0;
     z-index: 100; // vai ficar na frente de 100 tags do mesmo nivel
@@ -68,14 +69,14 @@ section.full-banner {
     color: #242424;
 }
 
-.button-disable {
+button.disabled {
     background: none;
-    border: solid 0.5px rgba(26,26,26, 0.8);
+    border: solid 0.5px rgba(36,36,36, 0.8);
     
 }
 
-.button-disable:hover{
-    background: rgba(26,26,26, 0.8);
+button.disabled:hovr{
+    background: rgba(36,36,36, 0.2);
 }
 
 button {
@@ -113,10 +114,4 @@ button:hover {
         background: url('../images/c6bank/hero-bg-desktop.webp');
         background-size: cover;
     }
-}
-> div > h3 > span {
-    background: rgba(36,36,36, 0.5);
-    border-radius: 25px;
-    font-size: 0.8em;
-    display: block;
 }
