--- a/assets/scss/reset.scss
+++ b/assets/scss/reset.scss
@@ -9,4 +9,7 @@ body {
     font-size: 16px;
     line-height: 1.5;
     color: #333;
+    
+    // incluindo barra de rolagem 
+    height: 2000px;
 }
