--- a/assets/scss/reset.scss
+++ b/assets/scss/reset.scss
@@ -13,3 +13,12 @@ body {
     // incluindo barra de rolagem 
     height: 2000px;
 }
+
+input {
+    border: none;
+    background: #fff;
+    box-shadow: 0px 0px 2px rgba(0,0,0,0.2);
+    padding: 10px;
+    border-radius: 5px;
+    padding: 10px;
+}
