--- a/assets/scss/tooltip.scss
+++ b/assets/scss/tooltip.scss
@@ -14,7 +14,7 @@
 
     .tooltip {
         width: 200px;
-        height: 120px;
+        height: auto;
         box-shadow: 0px 0px 4px 10px rgba(0,0,0,0.2);
         background-color: #fff;
         display: none;
